--- a/angular/src/app/Auth/bsignup/bsignup.component.html
+++ b/angular/src/app/Auth/bsignup/bsignup.component.html
@@ -1,56 +1,60 @@
-<section class="vh-100" style="background-color: #9A616D;">
-    <div class="container py-5 h-100">
-        
-   <div class="row d-flex justify-content-center align-items-center h-100">
-    <div class="col col-xl-6">
-        <form >
-            <div class="text-center mb-0 h1" style="color: beige; font-weight:700; font-size: 4em;">
-              <p>Sign up</p>
-              <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" >Link 1</a>
-                  <a class="dropdown-item" >Link 2</a>
-                  <a class="dropdown-item" >Link 3</a>
-                </div>
-              </div>
-              
-            </div>
-        
-           
-        
-            <!-- Name input -->
-            <div class="form-outline mb-4 form-group form-row">
-              <input type="text" id="registerName" class="form-control " formControlName="name"  placeholder="Name"/>
-            </div>
-        
-            <!-- Username input -->
-            <div class="form-outline mb-4 form-group form-row">
-              <input type="text" id="registerUsername" class="form-control" formControlName="username" placeholder="Username"/>
-            </div>
-        
-            <!-- Email input -->
-            <div class="form-outline mb-4 form-group form-row">
-              <input type="email" id="registerEmail" class="form-control" formControlName="email" placeholder="Email"/>
-            </div>
-        
-            <!-- Password input -->
-            <div class="form-outline mb-4 form-group form-row">
-              <input type="password" id="registerPassword" class="form-control" formControlName="password" placeholder="Password" />
-            </div>
-        
-            <!-- Repeat Password input -->
-            <div class="form-outline mb-4 form-group form-row">
-              <input type="password" id="registerRepeatPassword" class="form-control" formControlName="confirm" placeholder="Repeat password"/>
-            </div>
-        
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-3" >Sign in</button>
-          </form>
+<section class="vh-100" style="background-color: cornflowerblue;">
+      <div class="container py-5 h-100" style="background-color: #e1f2ff;width : 700px">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                  <div class="col col-xs-6 col-sm-6 col-md-6 col-xl-8">
+                        <form>
+                              <div class="text-center mb-0 h1"
+                                    style="color: rgb(47, 47, 47); font-weight:700; font-size: 3.5em;">
+                                    <p>Business Register</p>
+                              </div>
 
+                              <!-- Name input -->
+
+                              <div class="form-outline mb-4 form-group form-row">
+                                    <input type="text" id="registerName" class="form-control " formControlName="name"
+                                          placeholder="Name" />
+                              </div>
+
+                              <!-- Username input -->
+                              <div class="form-outline mb-4 form-group form-row">
+                                    <input type="text" id="registerUsername" class="form-control"
+                                          formControlName="username" placeholder="Username" />
+                              </div>
+
+                              <!-- Email input -->
+                              <div class="form-outline mb-4 form-group form-row">
+                                    <input type="email" id="registerEmail" class="form-control" formControlName="email"
+                                          placeholder="Email" />
+                              </div>
+
+                              <!-- Profession -->
+
+                              <div class="mb-4 form-group form-row ">
+                                    <select class="dropdown form-control">
+                                          <option class="dropdown-item">Choose Profession</option>
+                                          <option class="dropdown-item" value="hall_owner">Hall Owner</option>
+                                          <option class="dropdown-item" value="catering">Catering</option>
+                                          <option class="dropdown-item" value="photographer">PhotoGrapher</option>
+                                    </select>
+                              </div>
+
+                              <!-- Password input -->
+                              <div class="form-outline mb-4 form-group form-row">
+                                    <input type="password" id="registerPassword" class="form-control"
+                                          formControlName="password" placeholder="Password" />
+                              </div>
+
+                              <!-- Repeat Password input -->
+                              <div class="form-outline mb-4 form-group form-row">
+                                    <input type="password" id="registerRepeatPassword" class="form-control"
+                                          formControlName="confirm" placeholder="Repeat password" />
+                              </div>
+
+                              <!-- Submit button -->
+                              <button type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
+                        </form>
+
+                  </div>
+            </div>
       </div>
-  </div>
-        </div>
-        </section>
+</section>
