--- a/angular/src/app/Auth/signup/signup.component.html
+++ b/angular/src/app/Auth/signup/signup.component.html
@@ -1,29 +1,29 @@
-<section class="vh-100" style="background-color: #9A616D;">
-      <div class="container py-5 h-100">
-
+<div style="background-color: cornflowerblue;">
+      <div class="container py-5 h-100" style="background-color: #e1f2ff;width : 700px">
             <div class="row d-flex justify-content-center align-items-center h-100">
                   <div class="col col-xl-6">
                         <form [formGroup]="SignUp">
-                              <div class="text-center mb-0 h1" style="color: beige; font-weight:700; font-size: 4em;">
+                              <div class="text-center mb-0 h1"
+                                    style="color: rgb(47, 47, 47);; font-weight:700; font-size: 3.5em;">
                                     <p>Sign up</p>
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                    <button type="button" class="btn btn-lg btn-link btn-floating mx-1">
                                           <i class="fab fa-facebook-f"></i>
                                     </button>
 
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                    <button type="button" class="btn btn-lg btn-link btn-floating mx-1">
                                           <i class="fab fa-google"></i>
                                     </button>
 
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                    <button type="button" class="btn btn-lg btn-link btn-floating mx-1">
                                           <i class="fab fa-twitter"></i>
                                     </button>
 
-                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                    <button type="button" class="btn btn-lg btn-link btn-floating mx-2">
                                           <i class="fab fa-github"></i>
                                     </button>
                               </div>
 
-                              <p class="text-center">or:</p>
+                              <hr>
 
                               <!-- Name input -->
                               <div class="form-outline mb-4 form-group form-row">
@@ -73,4 +73,4 @@
                   </div>
             </div>
       </div>
-</section>
+</div>
