--- a/angular/src/app/photographers/photographers.component.html
+++ b/angular/src/app/photographers/photographers.component.html
@@ -69,7 +69,7 @@
                       alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
                     <div class="card-img-overlay d-flex flex-column">
                       <div class="card-body">
-                        <h4 class="card-title mt-3 "><a class="text-white" (click)="View(card.id)"> {{card.Special}}</a></h4>
+                        <h4 class="card-title mt-3 "><a class="text-white" > {{card.photoTeamName}}</a></h4>
                        
                       </div>
                       <div class="card-footer">
@@ -79,7 +79,7 @@
                             alt="Generic placeholder image" style="max-width:50px">
                           <div class="media-body">
                             <h6 class="my-0 text-white d-block">{{card.name}}</h6>
-                            <small>{{card.Experience}} years</small>
+                            <small>{{card.experience}} years</small>
                           </div>
                         </div>
                       </div>
