--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -3,8 +3,13 @@
             <div class="row">
                   <div class="col-md-12 navbar">
                         <a routerLink="/" class="logo navbar-brand text-white offset-md-2">WD</a>
+                         <ul class="nav" ><li class="nav-item "> <a routerLink="halls" class="nav-link">Halls</a></li>
+                              <li class="nav-item "> <a routerLink="/catering" class="nav-link">Catering</a></li>
+                                    <li class="nav-item "> <a routerLink="/photographer" class="nav-link">Photographers</a></li>
+                                    <li class="nav-item "> <a routerLink="/bsignup" class="nav-link">For Bussiness</a></li>
+                              </ul>
                         <ul class="nav">
-                              <li class="nav-item "><a routerLink="/login" class="nav-link">Login</a></li>
+                             <li class="nav-item "><a routerLink="/login" class="nav-link">Login</a></li>
                               <li class="nav-item"><a routerLink="/signup" class="nav-link">Sign Up</a></li>
                               <li class="nav-item"><a routerLink="#" class="nav-link">Contact Us</a></li>
                         </ul>
@@ -74,12 +79,11 @@
                               </div>
                         </a>
                   </div>
-
             </div>
-
       </div>
 </section>
-<h1 style="margin:1em 3em ;">Photographers</h1>
+<a routerLink="photographer" class="text-dark"></a>
+<h1 style="margin:1em 3em ;" >Photographers</h1>
 <section class="wrapper">
       <div class="container mx-auto mt-4">
 
@@ -151,6 +155,7 @@
 
       </div>
 </section>
+
 <section>
       <div class="footer">
             <footer class="bg-dark text-center text-lg-start">
@@ -199,7 +204,7 @@
                                                 <a href="#!" class="text-white">Blogs</a>
                                           </li>
                                           <li>
-                                                <a href="#!" class="text-white">Careerr</a>
+                                                <a href="#!" class="text-white">Career</a>
                                           </li>
 
                                     </ul>
@@ -229,7 +234,7 @@
                   <!-- Copyright -->
                   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                         © 2022 Copyright:
-                        <a class="text-white" href="https://mdbootstrap.com/">Wedding Planners.com</a>
+                        <a class="text-white" href="#">Wedding Planners.com</a>
                   </div>
                   <!-- Copyright -->
             </footer>
